[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bisslog-core"
version = "0.0.1"
description = "Business logic core (bisslog-core) - A lightweight and dependency-free implementation of Hexagonal Architecture (Ports and Adapters) in Python."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Darwin Stiven Herrera Cartagena", email = "darwinsherrerac@gmail.com"}
]
requires-python = ">=3.7"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/darwinhc/bisslog-core-py"

[tool.setuptools.packages.find]
where = ["bisslog_core"]
