[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bisslog"
dynamic = ["version"]
description = "Business logic core (bisslog-core) - A lightweight and dependency-free implementation of Hexagonal Architecture (Ports and Adapters) in Python."
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    {name = "Darwin Stiven Herrera Cartagena", email = "darwinsherrerac@gmail.com"}
]
requires-python = ">=3.7"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
keywords = ["hexagonal", "ports", "adapters", "business", "logic", "usecase", "domain", "DDD"]
[project.urls]
Homepage = "https://github.com/darwinhc/bisslog-core-py"

[tool.setuptools.packages.find]
include = ["bisslog", "bisslog.*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
